tests/expectations/parser/program/mapping_fail.out
Error [EPAR0370005]: expected 'const', 'struct', 'record', 'mapping', '@', 'async', 'function', 'transition', 'inline', 'script', '}' -- found 'mappin'
    --> test:3:5
     |
   3 |     mappin balances: address => u128;
     |     ^^^^^^
